kube/0-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: todo
spec: {}
status: {}
