kube/4-services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todo
  name: todo-svc
  namespace: todo
spec:
  ports:
  - port: 8080
    # nodePort: 30080
    targetPort: 5000
  selector:
    app: todo
  # externalIPs:
  # - 80.11.12.10
  type: NodePort
# status:
#   loadBalancer: {}
